# RFID-reader

./: .gitignore  Transceiver
Arduino Sketches/SerialStringRead/: SerialStringRead.ino
RFIDTestProject/: main.c
RFIDTestProject/inc/: MLX.h
SecondApp/app/: build.gradle  proguard-rules.pro
SecondApp/app/src/main/: AndroidManifest.xml
Transceiver Functions/: TransceiverFunctions.txt
XInC2_uC_Documentation/API_Reference/html/: _____macros_8h.html  _____macros_8h_source.html  _a_d_c_8h.html  _a_d_c_8h_source.html  _b_b_u_8h_source.html  _e_e_p_r_o_m_8h.html  _l_f_s_r_8h_source.html  _s_x_c_8h_source.html  _semaphore_8h.html  _semaphore_8h_source.html  _system_clock_8h.html  _system_clock_8h_source.html  _timer_8h_source.html  _v_p_u_8h_source.html  annotated.html  files.html  functions.html  globals_a.html  globals_b.html  globals_defs_a.html  globals_defs_b.html  globals_defs_d.html  globals_defs_s.html  globals_defs_t.html  globals_defs_x.html  globals_e.html  globals_enum.html  globals_eval.html  globals_g.html  globals_o.html  globals_p.html  globals_q.html  globals_t.html  globals_u.html  globals_vars.html  globals_vars_g.html  globals_vars_i.html  globals_vars_k.html  globals_vars_p.html  globals_vars_q.html  (+13 more)
XInC2_uC_Documentation/API_Reference/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_9.js  all_a.js  all_d.js  all_f.js  classes_0.js  classes_1.js  defines_1.js  defines_6.js  defines_7.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enums_4.js  enums_7.js  enums_8.js  enums_9.js  enumvalues_3.js  files_2.js  files_4.js  files_7.js  files_b.js  files_c.js  functions_2.js  functions_3.js  functions_5.js  functions_6.js  functions_7.js  groups_7.js  (+13 more)
XInC2_uC_Documentation/Examples/Ginger_Bamboo/01_Toggling_a_Pin/: main.gen  pin_toggle.c
XInC2_uC_Documentation/Examples/Ginger_Bamboo/02_Reading_a_Button/: button_read.c
XInC2_uC_Documentation/Examples/Ginger_Bamboo/06_RS232_LCD_Control/: rs232_lcd.c
XInC2_uC_Documentation/Examples/Ginger_Bamboo/07_SPI_EEPROM/: spi_eeprom.c
XInC2_uC_Documentation/Examples/Ginger_Bamboo/10_Button_Contention/: CMakeLists.txt  contention.c  contention.c.comments
XInC2_uC_Documentation/Examples/Ginger_Bamboo/11_Self_EEPROM_Reprogram/: main.gen  spi_eeprom.c
XInC2_uC_Documentation/Examples/Sample_Project_Template/: CMakeLists-ginger.txt
XInC2_uC_Documentation/Examples/Sample_Wireless_Template/: CMakeLists.txt  example.cpp
XInC2_uC_Documentation/Examples/Sample_Wireless_Template/inc/: CRC.h  FEC.h  HW_BBU.h  Port.h  RadioInterface.h  make_array.h
XInC2_uC_Documentation/Examples/XInC2_Dev/01_Toggling_a_Pin/: pin_toggle.c
XInC2_uC_Documentation/Examples/XInC2_Dev/02_Reading_a_Button/: CMakeLists.txt
XInC2_uC_Documentation/Examples/XInC2_Dev/04_Traffic_Light_Control/: light_ctrl.c
XInC2_uC_Documentation/Examples/XInC2_Dev/09_PWM_LEDs/: pwm_leds.c
XInC2_uC_firmware/: CMakeLists.txt  main.c
XInC2_uC_firmware/docs/API_Reference/: doxygen_sqlite3.db
XInC2_uC_firmware/docs/API_Reference/html/: _b_b_u_8h.html  _d_a_s_i_8h.html  _d_a_s_i_8h_source.html  _e_e_p_r_o_m_8h_source.html  _g_p_i_o_8h.html  _g_p_i_o_8h_source.html  _i2_c_8h.html  _i2_c_8h_source.html  _i_o_config_8h.html  _i_o_config_8h_source.html  _l_f_s_r_8h.html  _s_f_u_8h.html  _s_f_u_8h_source.html  _s_p_i_8h.html  _s_p_i_8h_source.html  _s_x_c_8h.html  _structs_8h.html  (+61 more)
XInC2_uC_firmware/inc/: InputStream.h  MLX.h  UART.h  UART_help.h  debug_strings.h  string_defines.h  uart_bluetooth.h
(+86 files in other folders)
